# squirrelypop

./: .gitignore  ;:q  README.md  pyproject.toml
lib/menu/: button.py
lib/screen/: background.py  screen.py
squirrelypop/: coral.py  player.py  square.py  ui_manager.py
squirrelypop/lib/menu/: button.py
squirrelypop/lib/menu/sprite/: animated_sprite.py
src/: bubble.py  coral.py  coral_manager.py  enemy.py  enemy_manager.py  game.py  house.py  life_sprite.py  player.py  square.py  ui_manager.py
src/lib/menu/sprite/: static_sprite.py
src/lib/util/: sound.py
